--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="col">
                             <div id="Service">
                                 <div class="row">
-                                    <img id = "ImageAccueil" src="img/image2Accueil.png">
+                                    <img id = "ImageAccueil" src="img/image2Accueil.PNG">
                                     <div id="background01" class="col">
                                         <h4 id="Service01">Service</h4>
                                         <p id="Text01">Un texte est une série orale ou écrite de mots perçus comme constituant un ensemble cohérent</p>
