--- a/html/APropos.html
+++ b/html/APropos.html
@@ -95,49 +95,49 @@
                     <marquee behavior="alternate" direction="left" scrollamount="7" onmouseover="this.stop();" onmouseout="this.start();">
                         <ul>
                             <li>
-                                <img src="../img/portrait1.png" alt="Directeur" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait1.png" alt="">
                                 <p id="pers1_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers1_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait2.png" alt="Co-Directeur" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait2.png" alt="">
                                 <p id="pers2_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers2_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait3.png" alt="Employé n°2" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait3.png" alt="">
                                 <p id="pers3_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers3_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait4.png" alt="Secrétaire" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait4.png" alt="">
                                 <p id="pers4_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers4_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait5.png" alt="Co-Secrétaire" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait5.png" alt="">
                                 <p id="pers5_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers5_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait6.png" alt="Employé n°3" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait6.png" alt="">
                                 <p id="pers6_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers6_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait7.png" alt="Employé n°4" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait7.png" alt="">
                                 <p id="pers7_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers7_fonc></p>
                             </li>
                             <li>
-                                <img src="../img/portrait8.png" alt="Employé n°1" class="rounded-circle d-inline-block align-text-top">
+                                <img src="../img/portrait8.png" alt="">
                                 <p id="pers8_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers8_fonc></p>
@@ -162,7 +162,7 @@
                     </ul>
                 </div>
                 <div class="lieu_image">
-                    <img src="../img/localisation_entreprise.png" alt="localisation_entreprise" style="width: 100%;">
+                    <img src="../img/localisation_entreprise.png" alt="">
                 </div>
             </div>
 
@@ -182,17 +182,17 @@
         <section id="section_partenaires" class="partenaires">
 			<div class="partenaires-images">
 				<ol>
-					<li><img src="../img/icon_logo.png" alt="partenaire"></li>
-					<li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
-                    <li><img src="../img/icon_logo.png" alt="partenaire"></li>
+					<li><img src="../img/icon_logo.png" alt=""></li>
+					<li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
+                    <li><img src="../img/icon_logo.png" alt=""></li>
 				</ol>
 			</div>
 		</section>
