--- a/html/APropos.html
+++ b/html/APropos.html
@@ -95,7 +95,7 @@
                     <marquee behavior="alternate" direction="left" scrollamount="7" onmouseover="this.stop();" onmouseout="this.start();">
                         <ul>
                             <li>
-                                <img src="../img/portrait1.png" alt="">
+                                <img src="../img/portrait1.webp" alt="">
                                 <p id="pers1_nom"></p>
                                 <hr noshade style="width:230px; border: 2px solid #128D5A;">
                                 <p class="coll_fonc" id=pers1_fonc></p>
