--- a/html/APropos.html
+++ b/html/APropos.html
@@ -32,7 +32,7 @@
                         <i class="fas fa-bars ouvrir fermer"></i>
                     </div>
                     <ul class="menu">
-                        <li><a href="#">A propos</a></li>
+                        <li><a class="active" href="#">A propos</a></li>
                         <li><a href="../html/NosServices.html">Nos services</a></li>
                         <li><a href="../html/Portfolio.html">Portfolio</a></li>
                         <li><a href="../html/Blog.html">Blog</a></li>
