--- a/html/APropos.html
+++ b/html/APropos.html
@@ -63,28 +63,60 @@
                 </div>
                 <div class="valeur_design">
                     <div class="design_info">
-                        <img src="../img/valeur1.webp" alt="" class="image">
-                        <p id="val1_nom"></p>
-                        <hr>
-                        <p class="coll_fonc" id=val1_comm></p>
+                        <div class="flip-valeur">
+                            <div class="flip-valeur-inner">
+                                <div class="flip-valeur-front">
+                                    <img src="../img/valeur1.webp" alt="" style="height:100%" class="image">
+                                </div>
+                                <div class="flip-valeur-back">
+                                    <p id="val1_nom"></p>
+                                    <hr>
+                                    <p class="coll_fonc" id=val1_comm></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="design_info">
-                        <img src="../img/valeur2.webp" alt="">
-                        <p id="val2_nom"></p>
-                        <hr>
-                        <p class="coll_fonc" id=val2_comm></p>
+                        <div class="flip-valeur">
+                            <div class="flip-valeur-inner">
+                                <div class="flip-valeur-front">
+                                    <img src="../img/valeur2.webp" alt="" class="image">
+                                </div>
+                                <div class="flip-valeur-back">
+                                    <p id="val2_nom"></p>
+                                    <hr>
+                                    <p class="coll_fonc" id=val2_comm></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="design_info">
-                        <img src="../img/valeur3.webp" alt="">
-                        <p id="val3_nom"></p>
-                        <hr>
-                        <p class="coll_fonc" id=val3_comm></p>
+                        <div class="flip-valeur">
+                            <div class="flip-valeur-inner">
+                                <div class="flip-valeur-front">
+                                    <img src="../img/valeur3.webp" alt="" class="image">
+                                </div>
+                                <div class="flip-valeur-back">
+                                    <p id="val3_nom"></p>
+                                    <hr>
+                                    <p class="coll_fonc" id=val3_comm></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="design_info">
-                        <img src="../img/valeur4.webp" alt="">
-                        <p id="val4_nom"></p>
-                        <hr>
-                        <p class="coll_fonc" id=val4_comm></p>
+                        <div class="flip-valeur">
+                            <div class="flip-valeur-inner">
+                                <div class="flip-valeur-front">
+                                    <img src="../img/valeur4.webp" alt="" class="image">
+                                </div>
+                                <div class="flip-valeur-back">
+                                    <p id="val4_nom"></p>
+                                    <hr>
+                                    <p class="coll_fonc" id=val4_comm></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
