--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
                 </div>
             </div>
 
+		<!-- CREATION DE LA PAGE LANDING (PAGE D'ACCUEIL) -->
+			<div id="page_acceuil">
+				<div class="intro_ent">
+					<h1>Digital<br>Consultant</h1>
+					<span>À propos</span>
+					<p>Consultant en transforamtion digitale, spécialiste de l'univers numérique, conseil et accompagnement auprès des entreprises. La planète Web et les nouvelles technologies ayant profondément changé les habitudes, les méthodes de travail et les modes de consommation, le décollage vers le digital est un enjeu vital pour toutes les structures, tous secteurs confondus. Le consultant digital se propose d’établir une feuille de route cohérente pour que l’aventure soit une réussite ! </p>
+				</div>
+				<div class="intro_desc">
+					<div class="desc_etape">
+						<strong>Service 1</strong>
+						<p>Un texte est une série orale ou écrite de mots perçus comme constituant un ensemble cohérent</p>
+						<span>Savoir plus</span>
+					</div>
+					<div class="desc_etape">
+						<strong>Service 2</strong>
+						<p>Un texte est une série orale ou écrite de mots perçus comme constituant un ensemble cohérent</p>
+						<span>Savoir plus</span>
+					</div>
+					<div class="desc_etape">
+						<strong>Service 3</strong>
+						<p>Un texte est une série orale ou écrite de mots perçus comme constituant un ensemble cohérent</p>
+						<span>Savoir plus</span>
+					</div>
+				</div>
+			</div>    
+
 
         <!-- CREATION DU FOOTER DE LA PAGE -->
             <footer>
