--- a/html/APropos.html
+++ b/html/APropos.html
@@ -31,7 +31,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> DIGITAL CONSULTANT</a>
+                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> Digital Consultant</a>
                     </div>
                     <div class="toggle">
                         <i class="fas fa-bars ouvrir fermer"></i>
@@ -216,20 +216,28 @@
                     <h3 class="parten_double" id="titre2_parten"></h3>   
                 </div>
                 <div class="parten_logo">
-                    <ol>
-                        <li><img src="../img/partenaires01.webp" alt=""></li>
-                        <li><img src="../img/partenaires02.webp" alt=""></li>
-                        <li><img src="../img/partenaires03.webp" alt=""></li>
-                        <li><img src="../img/partenaires04.webp" alt=""></li>
-                        <li><img src="../img/partenaires05.webp" alt=""></li>
-                        <li><img src="../img/partenaires06.webp" alt=""></li>
-                        <li><img src="../img/partenaires07.webp" alt=""></li>
-                        <li><img src="../img/partenaires08.webp" alt=""></li>
-                        <li><img src="../img/partenaires09.webp" alt=""></li>
-                        <li><img src="../img/partenaires10.webp" alt=""></li>
-                        <li><img src="../img/partenaires11.webp" alt=""></li>
-                        <li><img src="../img/partenaires12.webp" alt=""></li>
-                    </ol>
+			        <marquee behavior="alternate" direction="right">
+						<ol>
+							<li><img src="../img/partenaires01.webp" alt=""></li>
+							<li><img src="../img/partenaires02.webp" alt=""></li>
+							<li><img src="../img/partenaires03.webp" alt=""></li>
+							<li><img src="../img/partenaires04.webp" alt=""></li>
+							<li><img src="../img/partenaires05.webp" alt=""></li>
+							<li><img src="../img/partenaires06.webp" alt=""></li>
+						</ol>
+					</marquee>
+				</div>
+                <div class="parten_logo">
+					<marquee behavior="alternate" direction="left">
+						<ol>
+							<li><img src="../img/partenaires07.webp" alt=""></li>
+							<li><img src="../img/partenaires08.webp" alt=""></li>
+							<li><img src="../img/partenaires09.webp" alt=""></li>
+							<li><img src="../img/partenaires10.webp" alt=""></li>
+							<li><img src="../img/partenaires11.webp" alt=""></li>
+							<li><img src="../img/partenaires12.webp" alt=""></li>
+						</ol>
+					</marquee>
                 </div>     
             </div>
 
@@ -309,10 +317,10 @@
         </div>
 
 
-        <!-- Retour haut de page -->
-            <div class="retour_haut">
-                <button onclick="topFunction()" id="myBtn"><i class="fas fa-hand-point-up"></i></button>
-            </div>
+        <!-- RETOUR HAUT DE PAGE -->
+		<div class="retour_haut">
+			<button onclick="topFunction()" id="myBtn"><i class="fas fa-chevron-circle-up"></i></button>
+		</div>
 
         <!-- FEUILLES DE JAVASCRIPT (SCRIPT) -->
             <!-- Script Principal du code complet -->
