--- a/html/Blog.html
+++ b/html/Blog.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/Blog.css" />
+        <!-- Page CSS pour retour haut de page -->
+        <link rel="stylesheet" href="../css/haut_page.css">
 
         <!-- Lien pour icone -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +28,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> DIGITAL CONSULTANT</a>
+                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> Digital Consultant</a>
                     </div>
                     <div class="toggle">
                         <i class="fas fa-bars ouvrir fermer"></i>
@@ -148,10 +150,19 @@
             </footer>
 
 
+
+        <!-- RETOUR HAUT DE PAGE -->
+            <div class="retour_haut">
+                <button onclick="topFunction()" id="myBtn"><i class="fas fa-chevron-circle-up"></i></button>
+            </div>
+
+
         <!-- FEUILLES DE JAVASCRIPT (SCRIPT) -->
             <!-- Script Principal du code complet -->
                 <script src="../js/scripts.js" ></script>
                 <script src="../js/Blog.js" ></script>
+            <!-- Script pour retour haut de page -->
+                <script src="../js/haut_page.js"></script>
 
         
         <!-- FEUILLES DE JSON (SCRIPT) -->
