--- a/html/Mentions.html
+++ b/html/Mentions.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/Mentions.css" />
+		<!-- Page CSS pour retour haut de page -->
+        <link rel="stylesheet" href="../css/haut_page.css">
 
         <!-- Lien pour icone -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +28,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> DIGITAL CONSULTANT</a>
+                        <a href="../index.html"><img src="../img/icon_logo.webp" alt="icon_entreprise"> Digital Consultant</a>
                     </div>
                     <div class="toggle">
                         <i class="fas fa-bars ouvrir fermer"></i>
@@ -44,49 +46,49 @@
 
         <!-- CREATION DE LA PARTIE DES MENTIONS LEGALES -->
         <div class="MENTIONS_LEG">
-            <h1 id="MENTIONS_LEG">MENTIONS LEGALES</h1>
+            <h1 id="MENTIONS_LEG">MENTIONS LÉGALES</h1>
             <p class="sous-titre">En vigueur au <span id="Men_vigueur"></span></p>
                               
             <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans 
-                l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs, ci-après "l'Utilisateur", 
+                l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs, ci-après « l'Utilisateur », 
                 du site <span id="adresse_site"></span>, ci-après le Site, les présentes mentions légales.</p>
             <p>La connexion et la navigation sur le Site par l’Utilisateur implique acceptation intégrale et sans réserve des présentes mentions légales.</p>
-            <p>Ces dernières sont accessibles sur le Site à la rubrique "Mentions légales".</p>
+            <p>Ces dernières sont accessibles sur le Site à la rubrique « Mentions légales ».</p>
 
-            <h2>ARTICLE 1 : L'EDITEUR</h2>
+            <h2>ARTICLE 1 : L'ÉDITEUR</h2>
             <p>L’édition et la direction de la publication du site <span id="adr1_site"></span> 
                 est assurée par <span id="ed_dir_par"></span>, domicilié au <span id="ed_dir_adr"></span>, numéro de 
                 téléphone est <span id="ed_dir_tel"></span>, et adresse e-mail <span id="ed_dir_mail"></span>. Ci-après 
-                l'"Editeur".</p>
+                « L’Éditeur ».</p>
 
-            <h2>ARTICLE 2 : L'HEBERGEUR</h2>
+            <h2>ARTICLE 2 : L'HÉBERGEUR</h2>
             <p>L'hébergeur du site est la société <span id="heb_nom"></span>, dont le siège social est situé au 
                 <span id="heb_siege"></span>, avec le numéro de téléphone : <span id="heb_tel"></span>, 
                 et adresse mail de contact <span id="ed_dir_mail1"></span>.</p>
 
-            <h2>ARTICLE 3 : ACCES AU SITE</h2>
-            <p>Le Site est accessible en tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant découlant 
+            <h2>ARTICLE 3 : ACCÈS AU SITE</h2>
+            <p>Le Site est accessible en tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant découler 
                 d’une nécessité de maintenance.</p>
-            <p>En cas de modification, interruption ou suspension du Site, l'Editeur ne saurait être tenu responsable.</p>
+            <p>En cas de modification, interruption ou suspension du Site, l'Éditeur ne saurait être tenu responsable.</p>
 
-            <h2>ARTICLE 4 : COLLECTE DES DONNEES</h2>
+            <h2>ARTICLE 4 : COLLECTE DES DONNÉES</h2>
             <p>Le Site assure à l'Utilisateur une collecte et un traitement d'informations personnelles dans le respect de la vie privée conformément à la 
                 loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.</p>
             <p>En vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l'Utilisateur dispose d'un droit d'accès, de rectification, de 
                 suppression et d'opposition de ses données personnelles. L'Utilisateur exerce ce droit :</p>
             <ul>
-                <li><p>par mail à l'adresse email <span id="droit_acces_mail"></span> ;</p></li>
-                <li><p>par voie postale au <span id="droit_acces_adr"></span> ; </p></li>
-                <li><p>via un formulaire de contact ;</p></li>
-                <li><p>via son espace personnel ;</p></li>
+                <li><p>par mail à l'adresse e-mail <span id="droit_acces_mail"></span>,</p></li>
+                <li><p>par voie postale au <span id="droit_acces_adr"></span>,</p></li>
+                <li><p>via un formulaire de contact,</p></li>
+                <li><p>via son espace personnel.</p></li>
             </ul>
-            <p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation de l’Editeur est prohibée 
-                et pourra entraînée des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle et le Code civil.</p>
+            <p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation de l’Éditeur est prohibée 
+                et pourra entraîner des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle et le Code Civil.</p>
             <p>Pour plus d’informations, se reporter aux CGU du site <span id="adr2_site"></span>.</p>
-            <p>Pour plus d'informations en matière de protection des données à caractère personnel , se reporter à la Charte en matière de protection des données à 
-                caractère personnel du site <span id="adr3_site"></span> accessible à la rubrique "Données personnelles".</p>
+            <p>Pour plus d'informations en matière de protection des données à caractère personnel, se reporter à la Charte en matière de protection des données à 
+                caractère personnel du site <span id="adr3_site"></span> accessible à la rubrique « Données personnelles ».</p>
             <p>Pour plus d'informations en matière de cookies, se reporter à la Charte en matière de cookies du site <span id="adr4_site"></span> accessible à la 
-                rubrique "Cookies" (Article 7).</p>
+                rubrique « Cookies » (Article 7).</p>
         </div>
 
 
@@ -110,11 +112,17 @@
             <p>Copyright © 2022 Digital Consultant</p>
         </footer>
 
+		<!-- RETOUR HAUT DE PAGE -->
+		<div class="retour_haut">
+			<button onclick="topFunction()" id="myBtn"><i class="fas fa-chevron-circle-up"></i></button>
+		</div>
 
         <!-- FEUILLES DE JAVASCRIPT (SCRIPT) -->
             <!-- Script Principal du code complet -->
                 <script src="../js/scripts.js" ></script>
                 <script src="../js/mentions.js" ></script>
+			<!-- Script pour retour haut de page -->
+                <script src="../js/haut_page.js"></script>
 
         
         <!-- FEUILLES DE JSON (SCRIPT) -->
