--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <a class="active" href="index.html"><img src="img/icon_logo.webp" alt="icon_entreprise"> DIGITAL CONSULTANT</a>
+                        <a class="active" href="index.html"><img src="img/icon_logo.webp" alt="icon_entreprise"> Digital Consultant</a>
                     </div>
                     <div class="toggle">
                         <i class="fas fa-bars ouvrir fermer"></i>
@@ -101,6 +101,14 @@
                 <p>Copyright © 2022 Digital Consultant</p>
             </footer>
 
+		<!-- CREATION DU BANDEAU DES COOKIES -->
+			<div class="bandeau_cookies">
+				<p class="info_cookies">
+					<span>Ce site utilise des cookies pour vous offrir le meilleur service. En poursuivant votre navigation, vous acceptez l’utilisation des cookies.</span>
+					<button onclick="this.parentElement.style.display='none';" class="autoriser_cookies">Accepter</button>
+					<button onclick="window.location.href='html/RGPD.html';" class="plus_cookies">En savoir plus</button>
+				</p>
+			</div>
 
 
         <!-- FEUILLES DE JAVASCRIPT (SCRIPT) -->
