--- a/html/Blog.html
+++ b/html/Blog.html
@@ -157,6 +157,7 @@
                 <form action="#" id="ajout_post" class="avis">
                     <h3 class="titre_avis">REDIGER UN AVIS</h3>
                     <input type="text" class="comment_nom" name="Nom" placeholder="NOM PRENOM" />
+                    <input type="text" class="comment_img" name="Image" placeholder="CHEMIN DE L'IMAGE" />
                     <input type="text" class="comment_titre" name="Titre avis" placeholder="TITRE COMMENTAIRE" />
                     <textarea id="text" class="comment_desc" name="Commentaire" placeholder="COMMENTAIRE"></textarea>
                     <div></div>
