--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<span id="prest_suite2"></span>
 							</div>
 						</a>
-						<a class="desc_serv js-parallax scroll-start-zero" data-speed="0.075" href="ihtml/NosServices.html">
+						<a class="desc_serv js-parallax scroll-start-zero" data-speed="0.075" href="html/NosServices.html">
 							<div class="desc_etape">
 								<strong id="prest3_nom"></strong>
 								<p id="prest3_desc"></p>
